# wateros_user_mode_program

./: .gitignore  .rustfmt.toml  Cargo.toml  Makefile  README.md  build.rs  rust-toolchain.toml
.cargo/: config.toml
script/: gen_bin_makefile.sh  rv_gen_ext4_disk_img.sh  stat_contribute.bash  stat_texts.bash  version.bash
script/source/: console.bash
src/: lib.rs
src/riscv/: lang_items.rs  mod.rs  syscall.rs
src/riscv/linker_script/: linker.ld
src/share/: config.rs  console.rs  heap_allocator.rs  mod.rs  syscall.rs
