[package]
name = "wateros_user_mode_program"
version = "0.1.0"
edition = "2024"

[lib]
name = "wateros_user_lib"
path = "./src/lib.rs"

[[bin]]
name = "hello_world"
path = "./src/bin/hello_world.rs"
[[bin]]
name = "store_fault"
path = "./src/bin/store_fault.rs"
[[bin]]
name = "power"
path = "./src/bin/power.rs"

[dependencies]

[profile.release]
debug = false
panic = "abort"
