[package]
name = "wateros_user_mode_program"
version = "0.1.0"
edition = "2024"

[lib]
name = "wateros_user_lib"
path = "./src/lib.rs"

[[bin]]
name = "000_hello_world"
path = "./src/bin/000_hello_world.rs"
[[bin]]
name = "001_power"
path = "./src/bin/001_power.rs"
[[bin]]
name = "002_store_fault"
path = "./src/bin/002_store_fault.rs"

[dependencies]

[profile.release]
debug = false
panic = "abort"
