[package]
name = "wateros_user_mode_program"
version = "0.1.0"
edition = "2024"

[lib]
name = "wateros_user_lib"
path = "./src/lib.rs"

[[bin]]
name = "000_hello_world"
path = "./src/bin/000_hello_world.rs"
[[bin]]
name = "001_power"
path = "./src/bin/001_power.rs"
[[bin]]
name = "002_store_fault"
path = "./src/bin/002_store_fault.rs"
[[bin]]
name = "003_sleep"
path = "./src/bin/003_sleep.rs"
[[bin]]
name = "004_power_3"
path = "./src/bin/004_power_3.rs"
[[bin]]
name = "005_power_5"
path = "./src/bin/005_power_5.rs"
[[bin]]
name = "006_power_7"
path = "./src/bin/006_power_7.rs"


[dependencies]

[profile.release]
debug = false
panic = "abort"
